# plugins

./: cargo.toml
blazyr_clipboard_history_plugin/: Cargo.toml
blazyr_clipboard_history_plugin/src/: lib.rs
blazyr_google_search_plugin/: Cargo.toml
blazyr_google_search_plugin/src/: lib.rs
blazyr_ui_test_plugin/: Cargo.toml
blazyr_ui_test_plugin/src/: lib.rs
