[package]
name = "blazyr_clipboard_history_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blazyr-extension = { path = "../extension/" }
anyhow = "1.0.79"
thiserror = "1.0.56"
abi_stable = { version = "0.11.3", default-features = false }