[package]
name = "blazyr_google_search_plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "plugin"
crate-type = ["cdylib"]

[dependencies]
spotlight-extension = { path = "../extension/" }
anyhow = "1.0.79"
thiserror = "1.0.56"
abi_stable = { version = "0.11.3", default-features = false }
webbrowser = "0.8.12"
querystring = "1.1.0"
